style: update theming

--- a/index.html
+++ b/index.html
@@ -1,69 +1,77 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <link rel="stylesheet" type="text/css" href="./style.css" />
-  <link rel="stylesheet" type="text/css" href="./index.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
+    <link rel="stylesheet" type="text/css" href="./public/style.css"/>
+    <link rel="stylesheet" type="text/css" href="./public/index.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Chart Libraries Dashboard</title>
-    
-  </head>
-  <body>
-    <div class="container">
-      <section class="hero">
-        <h1>Chart Libraries Dashboard</h1>
+
+</head>
+<body>
+<div class="container">
+    <section class="hero">
+        <h1>Chart Libraries</h1>
         <nav>
-          <ul>
-            <li><a href="/pages/bar/bar.html">Bar Chart Comparison</a></li>
-            <li><a href="/pages/line/line.html">Line Chart Comparison</a></li>
-            <li><a href="/pages/pie/pie.html">Pie Chart Comparison</a></li>
-          </ul>
+            <ul>
+                <li><a href="/pages/bar/bar.html">Bar Charts</a></li>
+                <li><a href="/pages/line/line.html">Line Charts</a></li>
+                <li><a href="/pages/pie/pie.html">Pie Charts</a></li>
+            </ul>
         </nav>
         <div class="desc">
-          Explore and compare the top JavaScript charting libraries used in this project. Each library offers unique features, chart types, and integration options. Click on the links above to see a comparison of common chart types.
+            Explore and compare the top JavaScript charting libraries used in this project. Each library offers unique
+            features, chart types, and integration options. Click on the links above to see a comparison of common chart
+            types.
         </div>
-      </section>
-      <section class="features">
+    </section>
+    <section class="features">
         <div class="lib-list">
-          <div class="lib-card">
-            <h2>D3.js</h2>
-            <p>Powerful, low-level data visualization framework. Highly customizable, supports complex charts and data-driven documents.</p>
-            <p><strong>Current Version:</strong> 7.9.0</p>
-            <a href="https://www.npmjs.com/package/d3" target="_blank">View on npm</a>
-          </div>
-          <div class="lib-card">
-            <h2>ECharts</h2>
-            <p>Robust, open-source charting library from Apache. Offers 20+ chart types, 3D rendering, and large-scale data visualization.</p>
-            <p><strong>Current Version:</strong> 6.0.0</p>
-            <a href="https://www.npmjs.com/package/echarts" target="_blank">View on npm</a>
-          </div>
-          <div class="lib-card">
-            <h2>Chart.js</h2>
-            <p>Simple yet flexible library for interactive charts using HTML5 canvas. Great for quick, visually appealing charts.</p>
-            <p><strong>Current Version:</strong> 4.5.0</p>
-            <a href="https://www.npmjs.com/package/chart.js" target="_blank">View on npm</a>
-          </div>
-          <div class="lib-card">
-            <h2>ApexCharts</h2>
-            <p>Modern, open-source charting library with responsive and interactive charts. Easy integration with Vue, React, and Angular.</p>
-            <p><strong>Current Version:</strong> 5.3.3</p>
-            <a href="https://www.npmjs.com/package/apexcharts" target="_blank">View on npm</a>
-          </div>
-          <div class="lib-card">
-            <h2>Highcharts</h2>
-            <p>Feature-rich charting library with a wide array of chart types. Free for personal/non-commercial use, commercial license required otherwise.</p>
-            <p><strong>Current Version:</strong> 12.3</p>
-            <a href="https://www.npmjs.com/package/highcharts" target="_blank">View on npm</a>
-          </div>
-          <div class="lib-card">
-            <h2>uPlot</h2>
-            <p>Small, fast, memory-efficient Canvas 2D-based chart for time series, lines, areas, ohlc & bars. Minimal documentation.</p>
-            <p><strong>Current Version:</strong> 1.6.27</p>
-            <a href="https://www.npmjs.com/package/uplot" target="_blank">View on npm</a>
-          </div>
+            <div class="lib-card">
+                <h2><a href="https://d3js.org/" target="_blank">D3.js</a></h2>
+                <p>Powerful, low-level data visualization framework. Highly customizable, supports complex charts and
+                    data-driven documents.</p>
+                <p><strong>Current Version:</strong> 7.9.0</p>
+                <a href="https://www.npmjs.com/package/d3" target="_blank">View on npm</a>
+            </div>
+            <div class="lib-card">
+                <h2><a href="https://echarts.apache.org/en/index.html" target="_blank"> ECharts</a></h2>
+                <p>Robust, open-source charting library from Apache. Offers 20+ chart types, 3D rendering, and
+                    large-scale data visualization.</p>
+                <p><strong>Current Version:</strong> 6.0.0</p>
+                <a href="https://www.npmjs.com/package/echarts" target="_blank">View on npm</a>
+            </div>
+            <div class="lib-card">
+                <h2><a href="https://www.chartjs.org/" target="_blank">Chart.js</a></h2>
+                <p>Simple yet flexible library for interactive charts using HTML5 canvas. Great for quick, visually
+                    appealing charts.</p>
+                <p><strong>Current Version:</strong> 4.5.0</p>
+                <a href="https://www.npmjs.com/package/chart.js" target="_blank">View on npm</a>
+            </div>
+            <div class="lib-card">
+                <h2><a href="https://apexcharts.com/" target="_blank"> ApexCharts</a></h2>
+                <p>Modern, open-source charting library with responsive and interactive charts. Easy integration with
+                    Vue, React, and Angular.</p>
+                <p><strong>Current Version:</strong> 5.3.3</p>
+                <a href="https://www.npmjs.com/package/apexcharts" target="_blank">View on npm</a>
+            </div>
+            <div class="lib-card">
+                <h2><a href="https://www.highcharts.com/" target="_blank"> Highcharts</a></h2>
+                <p>Feature-rich charting library with a wide array of chart types. Free for personal/non-commercial use,
+                    commercial license required otherwise.</p>
+                <p><strong>Current Version:</strong> 12.3</p>
+                <a href="https://www.npmjs.com/package/highcharts" target="_blank">View on npm</a>
+            </div>
+            <div class="lib-card">
+                <h2><a href="https://github.com/leeoniya/uPlot#readme" target="_blank"> uPlot</a></h2>
+                <p>Small, fast, memory-efficient Canvas 2D-based chart for time series, lines, areas, ohlc & bars.
+                    Minimal documentation.</p>
+                <p><strong>Current Version:</strong> 1.6.27</p>
+                <a href="https://www.npmjs.com/package/uplot" target="_blank">View on npm</a>
+            </div>
         </div>
-      </section>
-    </div>
-  </body>
+    </section>
+</div>
+</body>
 </html>
