--- a/pages/pie/pie.html
+++ b/pages/pie/pie.html
@@ -1,93 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Pie Chart Comparison</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uplot@1.6.27/dist/uPlot.min.css">
-  <link rel="stylesheet" type="text/css" href="../../style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/d3@7.9.0/dist/d3.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/echarts@6.0.0/dist/echarts.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.5.0/dist/chart.umd.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/apexcharts@5.3.3/dist/apexcharts.min.js"></script>
-  <script src="https://code.highcharts.com/12.3/highcharts.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/uplot@1.6.27/dist/uPlot.iife.min.js"></script>
-  <style>
-    body {
-      background: #f5f6fa;
-      font-family: Arial, sans-serif;
-    }
-    .dashboard {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 24px;
-    }
-    .chart-area {
-      width: 320px;
-      height: 220px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Pie Chart Comparison</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uplot@1.6.27/dist/uPlot.min.css">
+    <link rel="stylesheet" type="text/css" href="../../public/style.css"/>
+    <link rel="stylesheet" type="text/css" href="../../public/index.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/d3@7.9.0/dist/d3.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/echarts@6.0.0/dist/echarts.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.5.0/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts@5.3.3/dist/apexcharts.min.js"></script>
+    <script src="https://code.highcharts.com/12.3/highcharts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uplot@1.6.27/dist/uPlot.iife.min.js"></script>
+    <style>
+        body {
+            background: var(--bg, #dfeeea);
+            font-family: Arial, sans-serif;
+        }
+
+        .dashboard {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 24px;
+        }
+
+        .chart-area {
+            width: 320px;
+            height: 220px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-  <h1>Pie Chart Comparison</h1>
+<div class="container">
+    <h1 class="page-title">Pie Chart Comparison</h1>
     <nav style="margin-bottom:24px; font-size:1.1em;">
-      <a href="../index.html">Home</a> &gt; Pie Chart Comparison
+        <a href="../index.html">Home</a> &gt; Pie Chart Comparison
     </nav>
-  <div class="dashboard">
-      <div class="card">
-        <h2>D3.js</h2>
-        <div class="chart-area">
-          <svg id="d3-pie" width="320" height="220"></svg>
+    <div class="dashboard">
+        <div class="card">
+            <h2>D3.js</h2>
+            <div class="chart-area">
+                <svg id="d3-pie" width="320" height="220"></svg>
+            </div>
         </div>
-      </div>
-      <div class="card">
-        <h2>ECharts</h2>
-        <div class="chart-area">
-          <div id="echarts-pie" style="width: 320px; height: 220px;"></div>
+        <div class="card">
+            <h2>ECharts</h2>
+            <div class="chart-area">
+                <div id="echarts-pie" style="width: 320px; height: 220px;"></div>
+            </div>
         </div>
-      </div>
-      <div class="card">
-        <h2>Chart.js</h2>
-        <div class="chart-area">
-          <canvas id="chartjs-pie" width="320" height="220"></canvas>
+        <div class="card">
+            <h2>Chart.js</h2>
+            <div class="chart-area">
+                <canvas id="chartjs-pie" width="320" height="220"></canvas>
+            </div>
         </div>
-      </div>
-      <div class="card">
-        <h2>ApexCharts</h2>
-        <div class="chart-area">
-          <div id="apexcharts-pie"></div>
+        <div class="card">
+            <h2>ApexCharts</h2>
+            <div class="chart-area">
+                <div id="apexcharts-pie"></div>
+            </div>
         </div>
-      </div>
-      <div class="card">
-        <h2>Highcharts</h2>
-        <div class="chart-area">
-          <div id="highcharts-pie" style="width:320px; height:220px;"></div>
+        <div class="card">
+            <h2>Highcharts</h2>
+            <div class="chart-area">
+                <div id="highcharts-pie" style="width:320px; height:220px;"></div>
+            </div>
         </div>
-      </div>
-    <div class="card">
-      <h2>uPlot</h2>
-      <div class="chart-area">
-        <div id="uplot-pie" style="width:320px; height:220px;">uPlot does not support pie charts natively.</div>
-      </div>
+        <div class="card">
+            <h2>uPlot</h2>
+            <div class="chart-area">
+                <div id="uplot-pie" style="width:320px; height:220px;">uPlot does not support pie charts natively.</div>
+            </div>
+        </div>
     </div>
-  </div>
-  </div>
-  <script src="pie-d3.js"></script>
-  <script src="pie-echarts.js"></script>
-  <script src="pie-chartjs.js"></script>
-  <script src="pie-apexcharts.js"></script>
-  <script src="pie-highcharts.js"></script>
-  <script>
-    window.addEventListener('DOMContentLoaded', function() {
-      renderD3PieChart();
-      renderEChartsPieChart();
-      renderChartJSPieChart();
-      renderApexChartsPieChart();
-      renderHighchartsPieChart();
+</div>
+<script src="pie-d3.js"></script>
+<script src="pie-echarts.js"></script>
+<script src="pie-chartjs.js"></script>
+<script src="pie-apexcharts.js"></script>
+<script src="pie-highcharts.js"></script>
+<script>
+    window.addEventListener('DOMContentLoaded', function () {
+        renderD3PieChart();
+        renderEChartsPieChart();
+        renderChartJSPieChart();
+        renderApexChartsPieChart();
+        renderHighchartsPieChart();
     });
-  </script>
+</script>
 </body>
 </html>
